# vember-os

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  branding.py  core.py  docker-compose.yml  input_handler.py  main.py  pyproject.toml  runner.py  vember-os.code-workspace  vember_setup.py  windfall.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: version-sync.yml
assets/: branding.py
engine/: core.py  dashboards.py  extensions.py  input_handler.py  runner.py  views.py  widgets.py  windfall.py
nodes/: stratos_link.py  thermal_matrix.py  thermal_monitor.py  weather.py
ops/: thermal_monitor.py
scripts/: architect.py  data_hub.py  fetch.py  fetch_weather_worker.py  forge_init.sh  gatekeeper.py  health.py  overseer.py  scheduler.py  sync_version.py  ui_core.py  vanguard.py  vember_cli.py  vember_setup.py  windfall.py
src/vember_core/: main.py
src/vember_core/engine/: windfall.py
src/vember_core/engine/backends/: tui.py
src/vember_core/nodes/: manager.py
tests/engine/: test_core.py
tests/ui/: test_kernel.py  test_main_dashboard.py  test_responsive.py  test_widgets.py
