[project]
name = "vember-os"
version = "0.1.1a9"
description = "Secure, Docker-orchestrated Node Automation Ecosystem"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "anyio>=4.13.0",
    "psutil>=7.2.2",
    "pytest-json-report>=1.5.0",
    "rich",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[project.scripts]
sync-ver = "scripts.sync_version:sync"
vember-review = "scripts.gatekeeper:main"
vember-setup = "vember_setup:main"
